adds audio file uploading